recursion.lessons.recursion.koch.Crab.scala.error
Crab:6: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:8: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:10: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:12: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:14: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:16: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^Crab:18: error: not found: value drawCurve
		drawCurve(levels-1,length/Math.sqrt(2))
                ^