recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
if(levels==0){
		avance(length)
	}else{
		drawCurve(levels-1,length/Math.sqrt(2))
		gauche(120)
		drawCurve(levels-1,length/Math.sqrt(2))
		droite(60)
		drawCurve(levels-1,length/Math.sqrt(2))
		droite(60)
		drawCurve(levels-1,length/Math.sqrt(2))
		droite(60)
		drawCurve(levels-1,length/Math.sqrt(2))
		droite(60)
		drawCurve(levels-1,length/Math.sqrt(2))
		gauche(120)
		drawCurve(levels-1,length/Math.sqrt(2))
	}	
}
